<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    tools:context=".ui.main.MainFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/mobNumIDTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobNumID"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mobNumID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notAssigned"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/mobNumPrefixTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/mobNumberPrefix"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/mobNumPrefix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoText="false"
                android:ems="10"
                android:hint="09XX"
                android:inputType="phone"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp">

            <TextView
                android:id="@+id/mobNetworkTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobNetwork"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/mobNetwork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="GLOBE"
                android:inputType="none|textCapCharacters"
                android:textSize="18sp" />

        </TableRow>

    </TableLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/addBtn"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:text="@string/addBtn" />

                <Button
                    android:id="@+id/findBtn"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:text="@string/findBtn" />

                <Button
                    android:id="@+id/deleteBtn"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:text="@string/deleteBtn" />

                <Button
                    android:id="@+id/clearFieldsBtn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".8"
                    android:backgroundTint="@color/colorAccent"
                    android:padding="10dp"
                    android:text="@string/clearFields"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/nextPageBtn"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias=".1" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/backBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:contentDescription="Home Button"
                    android:src="@drawable/ic_baseline_home_24" />
            </TableRow>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/addAllPrefixesBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:backgroundTint="#DD77BA99"
                android:text="@string/addDefaultPrefixes"
                android:visibility="visible" />

            <Button
                android:id="@+id/clearDatabaseBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/clearDatabase" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/savedPrefixesHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/savedNumbers"
                android:textSize="18sp"
                android:textStyle="italic" />
        </TableRow>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/number_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp" >

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>