<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    tools:context=".ui.main.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/mobNumPrefixTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/mobNumberPrefix"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/mobNumPrefix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="09xx"
                    android:inputType="phone"
                    android:singleLine="false"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/mobNetworkTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobNetwork"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/mobNetwork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="{{NETWORK}}"
                    android:textAlignment="textStart"
                    android:textColor="#808080"
                    android:textSize="18sp" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <Button
                        android:id="@+id/findBtn"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".7"
                        android:backgroundTint="@color/colorPrimary"
                        android:text="@string/DetermineNetwork"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/clearFieldsBtn"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight=".3"
                        android:backgroundTint="@color/colorAccent"
                        android:text="clear"
                        android:textColor="#939397"
                        android:textSize="20sp" />

                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1">

                    <Button
                        android:id="@+id/Btn1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".33"
                        android:text="1"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/Btn2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".33"
                        android:text="2"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/Btn3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".33"
                        android:text="3"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/Btn4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".33"
                        android:text="4"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/Btn5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".33"
                        android:text="5"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/Btn6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".33"
                        android:text="6"
                        android:textSize="24sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/Btn7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".33"
                        android:text="7"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/Btn8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".33"
                        android:text="8"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/Btn9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".33"
                        android:text="9"
                        android:textSize="24sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/BtnPlus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".33"
                        android:text="@string/btnPlus"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/Btn0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".33"
                        android:text="0"
                        android:textSize="24sp" />

                    <ImageButton
                        android:id="@+id/BtnbackSpace"
                        style="@style/Widget.AppCompat.ImageButton"
                        android:layout_width="match_parent"
                        android:layout_height="53dp"
                        android:layout_weight=".33"
                        android:src="@android:drawable/ic_input_delete" />

                </TableRow>

            </TableLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp">

                <Button
                    android:id="@+id/nextPageBtn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_weight=".2"
                    android:alpha=".65"
                    android:backgroundTint="#DD77BA99"
                    android:text="Update Database"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/gotoInstructionsBtn"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/gotoInstructionsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="Instructions"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/nextPageBtn" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>